--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Share+Tech+Mono&display=swap');
 
 
@@ -10,6 +9,7 @@ body {
     min-height: 100vh;
     background-image: url("columbina.jpg");
     background-position: center;
+    background-size: cover;
     font-family: "Share Tech Mono";
 }
 
@@ -18,27 +18,29 @@ h1, p {
     background-color: black;
     padding: 20px;
     border-radius: 20px;
+    text-align: center;
+    max-width: 550px;
 }
 
 .container {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     font-size: 20px;
     background-color: rgb(22, 126, 158);
     padding: 20px;
     border-radius: 20px;
 }
 
-.container * {
+.container > * {
     display: flex;
     align-items: center;
     flex-direction: column;
-}
-
-.container > * {
     margin-right: 20px;
 }
 
-.container * > :first-child {
+.container * :first-child {
     border-radius: 10px;
     padding: 10px;
     font-size: 60px;
